--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "toolchain/crosstool-ng"]
 	path = toolchain/crosstool-ng
 	url = https://github.com/crosstool-ng/crosstool-ng
+[submodule "kernel/linux"]
+	path = kernel/linux
+	url = https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux
